[package]
name = "redb-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
bincode = "1.3.3"
lolraft = "0.10.2"
oneshot = "0.1.7"
redb = "2.1.0"
serde = { version = "1.0.203", features = ["derive"] }
